--- a/main.html
+++ b/main.html
@@ -10,7 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<article>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sapiente eius earum quam repellat vitae dolorem! Esse, fuga dolor. Enim illum eum, ullam maiores neque corrupti velit molestiae dicta? Nesciunt!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sapiente eius earum quam repellat vitae dolorem! Esse, fuga dolor. Enim illum eum, ullam maiores neque corrupti velit molestiae dicta? Nesciunt!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sapiente eius earum quam repellat vitae dolorem! Esse, fuga dolor. Enim illum eum, ullam maiores neque corrupti velit molestiae dicta? Nesciunt!</p>
 
+</article>
+<ul>
+    <li>First Item</li>
+    <li>Second Item</li>
+    <li>Third Item</li>
+    <li>Fourth Item</li>
+    <li>Fifth Item</li>
+</ul>
 </body>
 
 </html>
